# PDF-Manager

./: .dockerignore  .env  .env.example  .env.production  .env.secrets.template  .eslintignore  .gitignore  CHANGELOG.md  DETAILED-MERGE-CHECKLIST-&-DEPLOYMENT-GUIDE.md  Dockerfile  Dockerfile.prod  FRONTEND_SETUP.md  IMPLEMENTATION_GUIDE.md  PROJECT_COMPLETION_VERIFICATION.md  README.md  RUNNING_GUIDE.md  app.py  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  logging_config.py  mkdocs.yml  models.py  pdf_manager_app.py  pyproject.toml  pytest.ini  requirements.txt  setup.bat  setup.ps1  start.bat  start.sh  test_app.py  test_extract_pdf_headers.py  validators.py  wsgi.py
.github/: changelog-config.json  dependabot.yml
backend/: Dockerfile  __init__.py  app.py  config.py  database.py  extensions.py  logging_config.py  models.py  ocr_test.py  pdf_manager_app.py  requirements.txt  validators.py
blueprints/: __init__.py  address_book.py  address_book_live.py  ai_pdf.py  auth.py  auto_extraction_api.py  bot.py  dashboard.py  extraction_api.py  pdf.py  pdf_editor.py  pdf_generator.py  rag.py  search.py  training.py  training_matcher.py  users.py  validation.py
config/: gunicorn.conf.py  production.py
database/: init.sql  schema.sql
docs/: API.md  API_DOCS.md  ARCHITECTURE.md  COMPLETE_WORKFLOW_SUMMARY.md  EXTRACT_PDF_HEADERS.md  PHASE_1.md  SETUP.md  implementation_guide_phases_4_6.md  index.md  mkdocs.yml  phase_4_user_selection_implementation.md  phase_5_validation_implementation.md  phase_6_save_export_implementation.md
frontend/: Dockerfile  (+2 more)
(+251 files in other folders)
